--- a/ai/kgateway-mcp/gateway-parameters.yaml
+++ b/ai/kgateway-mcp/gateway-parameters.yaml
@@ -1,7 +1,10 @@
 apiVersion: gateway.kgateway.dev/v1alpha1
 kind: GatewayParameters
 metadata:
-  name: kgateway-mcp
+  name: kgateway
   namespace: mcp
 spec:
   selfManaged: {}
+  kube:
+    agentGateway:
+      enabled: true
