--- a/platform/config/helm-applications/kgateway-mcp-app.yaml
+++ b/platform/config/helm-applications/kgateway-mcp-app.yaml
@@ -1,26 +1,33 @@
 project: ai
 syncWave: "1"
 
-name: kgateway-mcp
+name: kgateway
 chart: kgateway
-repoURL: us-docker.pkg.dev/developers-369321/gloo-platform-dev/charts
-targetRevision: v2.0.0-mcpdemo
+repoURL: cr.kgateway.dev/kgateway-dev/charts
+targetRevision: v2.1.0-main
 #  --set image.tag=v2.0.0
 # https://kgateway.dev/docs/mcp/
 namespace: kgateway-system
 helm:
   values:
-    controller:
-      image:
-        registry: us-docker.pkg.dev/developers-369321/gloo-platform-dev
-        repository: kgateway
-        tag: 2.0.0-mcpdemo
+    agentGateway:
+      enabled: true
     image:
-      registry: us-docker.pkg.dev/developers-369321/gloo-platform-dev
-      tag: v2.0.0-mcpdemo
+      registry: ghcr.io/kgateway-dev
     discoveryNamespaceSelectors:
     - matchLabels:
         kubernetes.io/metadata.name: mcp
-        kgateway-name: mcp
 
 # us-docker.pkg.dev/developers-369321/gloo-platform-dev/kgateway:2.0.0-mcpdemo
+
+#chart: kgateway
+#repoURL: us-docker.pkg.dev/developers-369321/gloo-platform-dev/charts
+#targetRevision: v2.0.0-mcpdemo
+    #controller:
+    #  image:
+    #    registry: us-docker.pkg.dev/developers-369321/gloo-platform-dev
+    #    repository: kgateway
+    #    tag: 2.0.0-mcpdemo
+    #image:
+    #  registry: us-docker.pkg.dev/developers-369321/gloo-platform-dev
+    #  tag: v2.0.0-mcpdemo
