--- a/platform/argocd-foundations/argo-projects.yaml
+++ b/platform/argocd-foundations/argo-projects.yaml
@@ -52,6 +52,7 @@ spec:
   - 'cr.kgateway.dev/kgateway-dev/charts'
   - 'ghcr.io/kagent-dev/kagent/helm'
   - 'us-docker.pkg.dev/developers-369321/gloo-platform-dev/charts'
+  - 'ghcr.io/agentgateway/agentgateway'
   clusterResourceWhitelist:
   - group: 'apiextensions.k8s.io'
     kind: 'CustomResourceDefinition'
