--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,80 +1,18 @@
 version: "3"
 
-tasks:
-
-  setup:auto-deploy:
-    desc: "Run full infrastructure setup"
-    cmds:
-      - ./infra-setup/02-create-and-setup-kind.sh
-      - ./infra-setup/03-deploy-gke-clusters.sh
-      - sleep 240
-      - ./infra-setup/03-w-deploy-gke-clusters-wait.sh
-      - ./infra-setup/04-setup-gke-clusters.sh
-
-  setup:full-cleanup:
-    desc: "Cleanup infrastructure (forcefull)"
-    cmds:
-      - ./infra-setup/00-cleanup.sh
-
-  get-argocd-secret:
-    desc: "Get Argo CD initial admin password, in current context"
-    cmds:
-      - kubectx -c
-      - kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d
-
-  port-forward-argocd:
-    desc: "Port-forward Argo CD server, in current context"
-    cmds:
-      - kubectx -c
-      - kubectl port-forward -n argocd svc/argocd-server 8080:443
-
-  port-forward-kagent:
-    desc: port forward kagent
-    cmds:
-      - kubectl port-forward -n kagent-system svc/kagent 8082:80
-
-  # https://github.com/christian-posta/scripted-solo-demos/tree/master/agentgateway/kubernetes
-  port-forward-agw:
-    desc: port forward agentgateway
-    cmds:
-      - AGW=$(kubectl get pods -n mcp -l gateway.networking.k8s.io/gateway-name=agent-gateway -o jsonpath='{.items[0].metadata.name}') && kubectl port-forward -n mcp $AGW 19000:19000
-
-  debug:crossplane-trace:
-    desc: "Trace"
-    cmds:
-      - crossplane beta trace valuestreamlandingzones -f {{.TASKFILE_DIR}}/teams/team-alpha/landing-zone-claim.yaml -n team-alpha-tenant
-
-  debug:restart-argo:
-    desc: "Restart Argo CD"
-    cmds:
-      - kubectl -n argocd rollout restart deployment argocd-repo-server
-      - kubectl -n argocd rollout status deployment argocd-repo-server
-
-  test:bucket:
-    desc: "Test bucket and access"
-    cmds:
-      - "{{.TASKFILE_DIR}}/infra-setup/99-pod-write-bucket-test.sh"
-
-  debug:helper-commands:
-    desc: "Collection of troubleshooting commands"
-    cmds:
-      - echo "kubectl apply -f https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.3.0/experimental-install.yaml"
-      - echo "REPO_POD=$(kubectl -n argocd get pod -l app.kubernetes.io/name=argocd-repo-server -o name | head -1)"
-      - echo "helm template test oci://ghcr.io/kagent-dev/kagent/helm/kagent --namespace kagent --values test-values.yaml"
-
-  test:kind-create-sandbox:
-    desc: "Create a vanilla Kind cluster (latest k8s, 2 nodes, name 'sandbox-cluster')"
-    cmds:
-      - |
-        cat <<EOF | kind create cluster --name sandbox-cluster --config=-
-        kind: Cluster
-        apiVersion: kind.x-k8s.io/v1alpha4
-        nodes:
-        - role: control-plane
-        - role: worker
-        EOF
-
-  test:kind-delete-sandbox:
-    desc: "Delete the 'sandbox-cluster' Kind cluster"
-    cmds:
-      - kind delete cluster --name sandbox-cluster
+includes:
+  setup:
+    taskfile: ./tasks/setup.yaml
+    dir: .
+  debug:
+    taskfile: ./tasks/test-and-debug.yaml
+    dir: .
+  mcp:
+    taskfile: ./tasks/mcp.yaml
+    dir: .
+  argocd:
+    taskfile: ./tasks/argocd.yaml
+    dir: .
+  port-forward:
+    taskfile: ./tasks/port-forward.yaml
+    dir: .
